--- a/Source/Quartz.Plugins.Quartzmon.RecentHistory/Quartz.Plugins.Quartzmon.RecentHistory.csproj
+++ b/Source/Quartz.Plugins.Quartzmon.RecentHistory/Quartz.Plugins.Quartzmon.RecentHistory.csproj
@@ -21,10 +21,17 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/mandlar/Quartzmon/</RepositoryUrl>
     <PackageId>Quartz.Plugins.Quartzmon.RecentHistory</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\Quartzmon\Content\Images\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
