--- a/Source/Quartzmon.SelfHost/Quartzmon.SelfHost.csproj
+++ b/Source/Quartzmon.SelfHost/Quartzmon.SelfHost.csproj
@@ -12,15 +12,17 @@
     <Title>Quartzmon Self Host</Title>
     <Authors>Bryan Denny, Jan Lucansky</Authors>
     <PackageProjectUrl>https://github.com/mandlar/Quartzmon/</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/jlucansky/public-assets/master/Quartzmin/avatar.png</PackageIconUrl>
+    <PackageIconUrl></PackageIconUrl>
     <Description>This package allows you to host Quartzmon within your own process.</Description>
-    <PackageTags>quartzmin;quartzmon;web;host</PackageTags>
+    <PackageTags>quartzmin;quartzmon;quartz;web;host</PackageTags>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Copyright © 2022 Bryan Denny, Jan Lucansky</Copyright>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/mandlar/Quartzmon/</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^net\d'))">
@@ -49,6 +51,10 @@
 
   <ItemGroup>
     <None Include="..\..\LICENSE" Pack="true" PackagePath="" />
+    <None Include="..\Quartzmon\Content\Images\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
