--- a/Source/Examples/AspNetWebHost/Web.config
+++ b/Source/Examples/AspNetWebHost/Web.config
@@ -10,8 +10,8 @@
   </configSections>
 
   <quartz>
-    <add key="quartz.plugin.recentHistory.type" value="Quartz.Plugins.Quartzmon.RecentHistory.ExecutionHistoryPlugin, Quartz.Plugins.Quartzmon.RecentHistory" />
-    <add key="quartz.plugin.recentHistory.storeType" value="Quartz.Plugins.Quartzmon.RecentHistory.Impl.InProcExecutionHistoryStore, Quartz.Plugins.Quartzmon.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.type" value="Quartzmon.Plugins.RecentHistory.ExecutionHistoryPlugin, Quartzmon.Plugins.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.storeType" value="Quartzmon.Plugins.RecentHistory.Impl.InProcExecutionHistoryStore, Quartzmon.Plugins.RecentHistory" />
   </quartz>
 
   <system.web>
