--- a/Source/Examples/AspNetCoreDocker/app.config
+++ b/Source/Examples/AspNetCoreDocker/app.config
@@ -4,7 +4,7 @@
     <section name="quartz" type="System.Configuration.NameValueFileSectionHandler" />
   </configSections>
   <quartz>
-    <add key="quartz.plugin.recentHistory.type" value="Quartz.Plugins.Quartzmon.RecentHistory.ExecutionHistoryPlugin, Quartz.Plugins.Quartzmon.RecentHistory" />
-    <add key="quartz.plugin.recentHistory.storeType" value="Quartz.Plugins.Quartzmon.RecentHistory.Impl.InProcExecutionHistoryStore, Quartz.Plugins.Quartzmon.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.type" value="Quartzmon.Plugins.RecentHistory.ExecutionHistoryPlugin, Quartzmon.Plugins.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.storeType" value="Quartzmon.Plugins.RecentHistory.Impl.InProcExecutionHistoryStore, Quartzmon.Plugins.RecentHistory" />
   </quartz>
 </configuration>
