--- a/Source/Examples/WinFormSelfHost/App.config
+++ b/Source/Examples/WinFormSelfHost/App.config
@@ -9,8 +9,8 @@
   </startup>
 
   <quartz>
-    <add key="quartz.plugin.recentHistory.type" value="Quartz.Plugins.Quartzmon.RecentHistory.ExecutionHistoryPlugin, Quartz.Plugins.Quartzmon.RecentHistory" />
-    <add key="quartz.plugin.recentHistory.storeType" value="Quartz.Plugins.Quartzmon.RecentHistory.Impl.InProcExecutionHistoryStore, Quartz.Plugins.Quartzmon.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.type" value="Quartzmon.Plugins.RecentHistory.ExecutionHistoryPlugin, Quartzmon.Plugins.RecentHistory" />
+    <add key="quartz.plugin.recentHistory.storeType" value="Quartzmon.Plugins.RecentHistory.Impl.InProcExecutionHistoryStore, Quartzmon.Plugins.RecentHistory" />
 
     <add key="quartz.plugin.quartzmon.type" value="Quartzmon.SelfHost.QuartzmonPlugin, Quartzmon.SelfHost" />
     <add key="quartz.plugin.quartzmon.url" value="http://localhost:9999" />
