--- a/Source/Quartzmon.Plugins.RecentHistory/Quartzmon.Plugins.RecentHistory.csproj
+++ b/Source/Quartzmon.Plugins.RecentHistory/Quartzmon.Plugins.RecentHistory.csproj
@@ -8,7 +8,7 @@
     <NoWarn>1591</NoWarn>
 
     <Version>1.0.4</Version>
-    <Product>Quartz.Plugins.Quartzmon.RecentHistory</Product>
+    <Product>Quartzmon.Plugins.RecentHistory</Product>
     <Title>Quartz.NET plugin to persist recent job execution history</Title>
     <Authors>Bryan Denny, Jan Lucansky</Authors>
     <PackageProjectUrl>https://github.com/mandlar/Quartzmon/</PackageProjectUrl>
@@ -20,7 +20,7 @@
     <Copyright>Copyright © 2022 Bryan Denny, Jan Lucansky</Copyright>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/mandlar/Quartzmon/</RepositoryUrl>
-    <PackageId>Quartz.Plugins.Quartzmon.RecentHistory</PackageId>
+    <PackageId>Quartzmon.Plugins.RecentHistory</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageIcon>logo.png</PackageIcon>
     <PackageIconUrl />
