--- a/Source/Quartzmon.Plugins.RecentHistory.PostgreSql/Quartzmon.Plugins.RecentHistory.PostgreSql.csproj
+++ b/Source/Quartzmon.Plugins.RecentHistory.PostgreSql/Quartzmon.Plugins.RecentHistory.PostgreSql.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>0.1.6</Version>
+        <Version>0.1.9</Version>
         <Description>Persistance for recent history using PostgreSQL</Description>
         <PackageProjectUrl>https://github.com/Greved/Quartzmon.Polished</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Greved/Quartzmon.Polished</RepositoryUrl>
@@ -13,8 +13,10 @@
         <Copyright>Copyright © 2023 Andrei Vedmid</Copyright>
         <RepositoryType>git</RepositoryType>
         <PackageTags>quartzmin;quartzmon;quartz;web;ui;postgresql</PackageTags>
-        <PackageLicenseUrl>LICENSE</PackageLicenseUrl>
+        <PackageLicenseUrl></PackageLicenseUrl>
         <PackageIcon>logo.png</PackageIcon>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -32,5 +34,9 @@
         <PackagePath></PackagePath>
       </EmbeddedResource>
     </ItemGroup>
+
+	<ItemGroup>
+		<None Include="LICENSE" Pack="true" PackagePath="" />
+	</ItemGroup>
 
 </Project>
